cmake_minimum_required(VERSION 3.17)
project(day01)

set(CMAKE_CXX_STANDARD 14)

include_directories(ex00)

add_executable(day01
#        ex00/main.cpp
#        ex00/Pony.cpp
#        ex00/Pony.hpp
#        ex01/ex01.cpp
#        ex02/Zombie.cpp
#        ex02/Zombie.hpp
#        ex02/ZombieEvent.cpp
#        ex02/ZombieEvent.hpp
#        ex02/main.cpp
#        ex03/Zombie.cpp
#        ex03/Zombie.hpp
#        ex03/ZombieHorde.cpp
#        ex03/ZombieHorde.hpp
#        ex03/main.cpp
        ex04/ex04.cpp
        )
